@@ -63,6 +63,7 @@ hash_tags = #cpan
 [Prereqs]
 Dist::Zilla           							= 4.102343
 Dist::Zilla::Plugin::Git						= 1.102810
+Dist::Zilla::Plugin::GithubMeta                 = 0.10
 Dist::Zilla::Plugin::Twitter        			= 0.009
 Dist::Zilla::Plugin::CheckChangesHasContent		= 0.003
 
