@@ -1,6 +1,9 @@
 Release history for Dist::Zilla::Plugin::JSAN
 
 {{$NEXT}}
+        
+        - added missed dependency from Dist::Zilla::Plugin::GithubMeta
+        - various docs update
 
 0.03      2010-11-22 13:43
 
